Add update API for assessments
