# swagger/v1/swagger.yaml
@@ -715,7 +715,7 @@ paths:
                   - form_data
               required:
               - assessment
-  "/api/v1/assessments/{assessment_id}":
+  "/api/v1/assessments/{id}":
     get:
       summary: Get Assessment
       tags:
@@ -723,7 +723,7 @@ paths:
       security:
       - bearerAuth: []
       parameters:
-      - name: assessment_id
+      - name: id
         in: path
         required: true
         schema:
@@ -736,49 +736,49 @@ paths:
               schema:
                 type: object
                 properties:
-                  data:
+                  id:
+                    type: integer
+                  title:
+                    type: string
+                  form_data:
                     type: object
-                    properties:
-                      id:
-                        type: string
-                      type:
-                        type: string
-                      attributes:
-                        type: object
-                        properties:
-                          id:
-                            type: integer
-                          title:
-                            type: string
-                          form_data:
-                            type: object
-                          account:
-                            type: object
-                            properties:
-                              id:
-                                type: integer
-                              title:
-                                type: string
-                          deleted_at:
-                            type: string
-                          created_at:
-                            type: string
-                          updated_at:
-                            type: string
-                        required:
-                        - id
-                        - title
-                        - form_data
-                        - account
-                        - deleted_at
-                        - created_at
-                        - updated_at
-                    required:
-                    - id
-                    - type
-                    - attributes
+                  deleted_at:
+                    type: string
+                  created_at:
+                    type: string
+                  updated_at:
+                    type: string
+                  account:
+                    id:
+                      type: integer
+                    uuid:
+                      type: string
+                    title:
+                      type: string
+                    logo:
+                      type: string
+                    deleted_at:
+                      type: string
+                    created_at:
+                      type: string
+                    updated_at:
+                      type: string
+                  required:
+                  - id
+                  - uuid
+                  - title
+                  - logo
+                  - deleted_at
+                  - created_at
+                  - updated_at
                 required:
-                - data
+                - id
+                - title
+                - form_data
+                - deleted_at
+                - created_at
+                - updated_at
+                - account
         '401':
           description: Unauthorized
           content:
@@ -790,6 +790,77 @@ paths:
                     type: string
                 required:
                 - error
+    put:
+      summary: Update Assessment
+      tags:
+      - Assessments
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Assessment Updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  message:
+                    type: string
+                required:
+                - id
+                - message
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: object
+                    additionalProperties:
+                      type: array
+                      items:
+                        type: string
+                required:
+                - errors
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                required:
+                - error
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                assessment:
+                  type: object
+                  properties:
+                    title:
+                      type: string
+                    form_data:
+                      type: object
+                  required:
+                  - title
+                  - form_data
+              required:
+              - assessment
   "/api/v1/employees/session":
     post:
       summary: Create an Employee Session
